assets/css/style.css
/* Global */
*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body{
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
    font-family: 'Montserrat', sans-serif;
}

/* Header */
#title, .card-title, .card-text {
  color: rgb(255, 255, 255);
} 

/* Main */
/* Search section */
#search-and-locale p {
  font-weight: 600;
  font-style: italic;
}

#searched-locale li:hover{
  cursor: pointer;
}

#locale {
  font-size: calc(0.9em + 1vw);
  width: 98%;
  border-bottom: 1px solid rgb(105,105,105);
  margin-left:auto; 
  margin-right:0;
}

.list-group-item {
  background-color: transparent;
}

/* Jumbotron */
.jumbotron{
  height: 65%;
  padding: 20px;
  background-color: rgb(52, 58, 64);
  color: rgb(255, 255, 255);
  border-radius: 10px;
  font-size: 20px;
}

#uv-num{
  padding: 5px 10px;
  border-radius: 5px;
  color: rgb(255, 255, 255);
}

/* 5 day forecast cards */
#card-deck {
  height: 200px;
}

#five-day-heading, .card-template{
  display: none;
}


/*** Media Queries ***/
/*-------------------*/
@media (max-width: 500px) {
  .jumbotron {
    height: 32%;
  }

  #locale img {
    width: 30%;
    height: auto;
  }

  #five-day{
    text-align: center;
  }

  #card-deck{
    height: 100%; 
  }

  .card-template { 
    margin-top: 10px;
    margin-left: auto;
    margin-right: auto;  
  }
}

